IA + collectible + base

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -89,3 +89,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+AgentRadius=20.000000
+
